--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @import url(setting.css);
-
+@import url(slider.css);
+@import url(services.css);
+@import url(amazing.css);
 
 .headertop{
     width: 100%;
@@ -130,148 +132,105 @@
 
  }
  .menu{
-  width: 100%;
+   width: 100%;
+   height: 40px;
    display: flex;
-   align-items: center;
    background-color:#fafafa;
-   height: 40PX;
    padding:0 16px;
    flex-flow: row nowrap;
    font-family: sans-serif;
    font-size: small;
    font-weight: 700;
+   border:1px solid lightgrey;
    position: relative;
+   
 
  }
  .menu  .rightmenu{
    display: flex;
-   width: 98.5%;
-   align-items: center;
-   justify-content: space-between;
+ 
   
  }
- .menu .rightmenu .menu-nav{
-  width: 70%;
-  position: absolute;
+ .menu .rightmenu .menu--nav{
+ width: 100%;
+ height: 100%;
 
  }
- .menu .rightmenu .menu-nav  .menu-list{
+ .menu .rightmenu .menu--nav  .menu--list{
+  height: 100%;
   display: flex;
-
- }
- .menu .rightmenu .menu-nav  .menu-list .menu-item{
-  display: block;
   list-style-type: none;
-  padding-right: 30px;
-  cursor: pointer;
-  
- }
-
-
- .menu .rightmenu .menu-nav  .menu-list .menu-item  svg{
+  gap: 10px;
   align-items: center;
-  overflow: hidden;
-  cursor: pointer;
- 
+
 
  }
-
- .menu .rightmenu .menu-nav  .menu-list .menu-item  .menu-link{
+ .menu .rightmenu  .menu--nav  .menu--list .menu--item{
+  width: auto;
+  line-height: 40px;
+  padding: 0 16px;
+  cursor: pointer;
   text-decoration: none;
-  color: #73747c;
+  font-size: 14px;
+  display: flex;
+
+  
+ }
+ .menu .rightmenu  .menu--nav  .menu--list .menu--item:first-child{
+  font-weight: 700;
  
  }
- .menu .rightmenu .menu-nav  .menu-list .menu-item svg:first-child  .menu-link{
-  font-weight: bold;
-  color: black;
- }
 
- .menu .rightmenu .menu-nav  .menu-list .menu-item:first-child  .menu-link{
-  font-weight: bold;
-  color: black;
- }
 
-.menu .leftmenu{
-  display: flex;
-  width: 12.5%;
-  height: 34px;
-  line-height: 34px;
-  background-color:#FEF6EF;
-  align-items: center;
-  justify-content:space-between;
-  color: #f57f17;
-  font-family: sans-serif;
-  border: none;
-  border-radius: 9999px;
-  cursor: pointer;
-  margin-top: 4px;
-  margin-bottom: 4px;
-
-  
-}
-.menu .leftmenu  svg{ 
-  width: 20px;
-  height: 20px;
-  padding-right: 4px;
-  margin-right: 12px;
-  
-}
-.menu .leftmenu  .parag{
-  font-size: small;
-  font-weight: normal;
-  margin-left: 12px;
-}
-
-.menu .rightmenu .menu2{
+ .menu .rightmenu .submenu{
+  width: 70%;
+  height: 440px;
   background-color: #f0f0f1;
-  display: block;
-  top: 34px;
-  right: 0;
+  display: none;
   position: absolute;
-  width: 50%;
-  height: 550px;
+  top: 40px;
+  right: 0;
   font-family: sans-serif;
   color: #73747c;
   cursor: pointer;
-  overflow: scroll;
+  overflow: auto;
   direction: ltr;
+
+
+  
 }
 
-.menu .rightmenu .menu2 .menu2--nav .menu2--list{
+.menu  .rightmenu  .menu--nav .menu--list .menu--item:hover .submenu{
+  display: block;
+ 
+ 
+}
+
+
+.menu  .rightmenu .submenu  .submenu--list{
   list-style-type: none;
   width: 100%;
-  height: 100%;
   direction: rtl;
 
+
 }
-.menu .rightmenu .menu2 .menu2--nav .menu2--list .menu2--item{
+.menu  .rightmenu   .submenu  .submenu--list .submenu--item{
   width: 100%;
-  height: 100%;
-  display: block;
+  height: 40px;
   text-decoration: none;
-  padding-right: 15px;
-  font-size: 12px;
+  font-size: 14px;
   color: #2b2b2b;
   line-height: 40px;
-  text-align: right;
+  padding: 0 12px;
+  align-items: center;
   
- 
 }
-.menu .rightmenu .menu2 .menu2--nav .menu2--list .menu2--item:hover{
+.menu  .rightmenu  .submenu  .submenu--list .submenu--item:hover{
   background-color: white;
   color: red;
 
 }
-
-.menu .rightmenu .menu2 .menu2--nav .menu2--list 
-.menu2--item svg{
-  color:   #2b2b2b;
-}
-.menu .rightmenu .menu2 .menu2--nav .menu2--list 
-.menu2--item svg:hover{
-  color: red;
-}
-.menu .rightmenu  .menu3{
+.menu .rightmenu .submenu .submenusub{
   width: 85%;
   height: 100%;
   background-color: #f57f17;
@@ -279,11 +238,69 @@
   top: 0;
   left: 0;
   position: absolute;
+  display: none;
   justify-content: space-between;
-  
+  overflow: auto;
+  direction: ltr;
+
+
+}
+
+.menu .rightmenu .submenu .submenusub .submenusubitems{
+  width: 20px;
+  height: 100%;
+  background-color: aqua;
 
  
+ 
 }
+
+.menu .rightmenu .submenu .submenu--list 
+.submenu--item:hover .submenusub{
+  display:flex;
+ 
+ 
+  
+}
+
+.menu .rightmenu .submenu .submenusub .submenusubitems 
+.submenusubitems--list{
+  width: 100%;
+  height: 100%;
+  list-style-type: none;
+  background-color: blueviolet;
+  direction: rtl;
+ 
+    
+}
+.menu .rightmenu .submenu .submenusub .submenusubitems .submenusubitems--list 
+.submenusubitems--item{
+  width: 100%;
+  display: block;
+  right: 0;
+  padding-right: 24px;
+  background-color: yellow;
+  position: absolute;
+  margin-top: 10px;
+  font-weight: bold;
+  text-decoration: none;
+
+  font-family: sans-serif;
+  font-size: 12px;
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
