--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,6 @@ body{
  .menu .rightmenu {
   width:100%;
   height:40px;
-  padding: 0 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -209,6 +208,23 @@ body{
   position: relative;
 
 }
+.menu  .rightmenu   .menuself .menu__list .menu__item::before{
+  content: "";
+  position: absolute;
+  top: 38px;
+  left: 0;
+  width: 1%;
+  height: 1.5px;
+  background-color: #fff;
+  transition: 0.2s;
+
+
+} 
+.menu  .rightmenu   .menuself .menu__list .menu__item:hover::before{
+  width: 100%;
+  background-color: red;
+} 
+
 
 
 .menu .rightmenu .menuself .menu__list 
@@ -220,6 +236,10 @@ body{
   align-items: center;
   color: black;
 
+}
+.menu .rightmenu .menuself .menu__list 
+.menu__item .menu__link svg{
+  margin-left: 4px;
 }
 
 .menu .rightmenu   .menuself .menu__list .menu__item:first-child .menu3{
@@ -306,6 +326,8 @@ body{
 }
 .menu  .rightmenu    .menuself .menu__list .menu__item:first-child .menu3 .menu3__nav .menu3__list .menu3__item .menu4 .head a{
   text-decoration: none;
+  display: flex;
+  align-items: center;
 
 }
 
@@ -331,14 +353,27 @@ body{
   margin-bottom: 10px;
   display: flex;
   align-items: center;
+  
 }
+
 .menu  .rightmenu   .menuself .menu__list .menu__item:first-child .menu3 .menu3__nav .menu3__list .menu3__item .menu4 .menu4__nav .menu4__list .menu4__link{
   text-decoration: none;
   color: #484646;
+  display: flex;
+  align-items: center;
+
 }
+
 .menu  .rightmenu   .menuself .menu__list .menu__item:first-child .menu3 .menu3__nav .menu3__list .menu3__item .menu4 .menu4__nav .menu4__list .menu4__link.title{
-  font-size: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: sans-serif;
   color: black;
+ 
+}
+.menu  .rightmenu   .menuself .menu__list .menu__item:first-child .menu3 .menu3__nav .menu3__list .menu3__item .menu4 .menu4__nav .menu4__list .menu4__link.title  span{
+  color: red;
+  margin-left: 4px;
 }
 
 .menu .leftmenu{
